--- a/.github/workflows/other_scripts.yml
+++ b/.github/workflows/other_scripts.yml
@@ -1,4 +1,4 @@
-name: Run other scripts on push
+name: Run scripts on push
 
 on: push  # This runs on every push or commit
 
@@ -7,6 +7,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run Lint
         run: npm run lint
 
